--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "drupal/components": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
+        "drupal/devel": "^2.0",
         "drupal/dropzonejs": "^2.0",
         "drupal/entity_browser": "2.x-dev",
         "drupal/entity_embed": "^1.0",
